link adm interfaces com ícones corretos

--- a/administrador/main.html
+++ b/administrador/main.html
@@ -49,7 +49,7 @@
           href="{root_path}aluno/"
           class="btn-large waves-effect waves-light bold almocai"
         >
-          <i class="material-icons left">person</i>
+          <i class="material-icons left">school</i>
           Aluno
         </a>
       </div>
@@ -61,7 +61,7 @@
           href="{root_path}funcionario/"
           class="btn-large waves-effect waves-light bold almocai azul"
         >
-          <i class="material-icons left">person</i>
+          <i class="material-icons left">perm_identity</i>
           Funcionário
         </a>
       </div>
