Correções pré release 1

--- a/componentes/nav-funcionario.html
+++ b/componentes/nav-funcionario.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="nav-wrapper container">
-    <img class="no-select brand-logo logo-navbar-verde" src="{root_path}assets/img/logo-verde.svg">
+    <img class="no-select brand-logo" src="{root_path}assets/img/logo-branca.svg">
     <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}">
