--- a/funcionario/cardapio/dia.html
+++ b/funcionario/cardapio/dia.html
@@ -20,8 +20,8 @@
       
       <div class="row">
         <div class="col s12 input-field">
-          <input id="alimento" name="alimento" type="text" required />
-          <label for="alimento">Alimento</label>
+          <input id="alimento{codigo}" name="alimento" type="text" required />
+          <label for="alimento{codigo}">Alimento</label>
         </div>
       </div>
 
