--- a/aluno/cardapio/dia_cartao.html
+++ b/aluno/cardapio/dia_cartao.html
@@ -1,4 +1,4 @@
-<div class="col s12 m6 l4 xl3">
+<div class="col s12 m6 xl3">
   <div class="card-panel cardapio__painel {fundo_cor}">
     <div class="cardapio__picture cardapio__picture--{num_dia}"></div>
     <h4 class="cardapio__cabecalho">
