--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -5,17 +5,15 @@
     </h4>
     <div class="row">
       <div class="col s12 center-align">
-        <h5>
-          Entre em contato com a nutricionista do câmpus.
-        </h5>
 
-        <p>
-          <b>E-mail:</b> nutricionista@mail.com
-        </p>
+        <a 
+          class="btn waves-effect waves-light almocai"
+          href="{root_path}aluno/intolerancias/"
+        >
+          Clique aqui
+      </a>
 
-        <div class="divider" style="margin: 2rem 0 2rem 0"></div>
-
-        <!-- se aluno tiver intolerância cadastrada <h6>Suas intolerâncias:</h6> -->
+        <!-- TODO mostrar intolerâncias confirmadas do aluno -->
       </div>
     </div>
   </div>
