--- a/aluno/intolerancias/main.html
+++ b/aluno/intolerancias/main.html
@@ -9,7 +9,7 @@
 			</div>
 		</div>
 
-		<form action="acao.php" method="POST">
+		<form action="acao.php" method="POST" enctype="multipart/form-data">
 			
 			<div class="row">
 				<div class="input-field col s12">
@@ -34,7 +34,7 @@
 			</div>
 			
 			<div class="row">			
-				<div class="file-field input-field col s12">				
+				<div class="file-field input-field col s12" >				
 					<div class="btn">
 						<input type="file" name="documento" id="documento" required />
 					</div>
