Funcionários podem visualizar intolerâncias

--- a/funcionario/main.html
+++ b/funcionario/main.html
@@ -7,6 +7,12 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col s12">
+    <a href="intolerancias_alunos/">Gerenciar intolerâncias dos alunos</a>
+  </div>
+</div>
+
 {{cartoes_presenca}}
 
 <!-- Mensagem caso ainda não tenha a quantidade de alunos necessária -->
