--- a/administrador/componentes/linha_usuario.html
+++ b/administrador/componentes/linha_usuario.html
@@ -25,7 +25,7 @@
             <label for="username">Username</label>
           </div>
           <div class="input-field col s12">
-            <input required id="senha" name="senha" type="password" placeholder="Senha (deixe vazia para não alterar)">
+            <input id="senha" name="senha" type="password" placeholder="Senha (deixe vazia para não alterar)">
             <label for="senha">Senha</label>
           </div>
         </div>
