--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -1,20 +1,49 @@
+<style type="text/css">
+  .legenda {
+	  border-radius: 8px;
+  }
+
+  .validada {
+    background-color: rgba(67, 137, 69, .3);
+  }
+
+  .pendente {
+    background-color: rgba(235, 166, 63, .3);
+  }
+
+  .rejeitada {
+    background-color: rgba(228, 12, 43, .3);
+  }
+</style>
+
 <div class="col s12 padding-card-small">
   <div class="card hoverable perfil__cartao-intolerancia">
     <h4 class="perfil__cartao-intolerancia--titulo">
       Você possui alguma intolerância/alergia alimentar?
     </h4>
     <div class="row">
-      <div class="col s12 center-align">
+      <div class="col s12 center">
 
         <a 
           class="btn waves-effect waves-light almocai"
           href="{root_path}aluno/intolerancias/"
         >
           Clique aqui
-      </a>
+        </a>
 
-        <!-- TODO mostrar intolerâncias confirmadas do aluno -->
+        
       </div>
     </div>
+
+    <div style="height: 1.2rem;"></div>
+
+    <div class="row">
+      <div class="col s12">
+        <ul class="collection">
+          {{intolerancias}}
+        </ul>
+      </div>
+    </div>
+
   </div>
 </div>
