--- a/funcionario/intolerancias_alunos/main.html
+++ b/funcionario/intolerancias_alunos/main.html
@@ -1,3 +1,21 @@
+<style type="text/css">
+.legenda {
+	border-radius: 8px;
+}
+
+.validada {
+	background-color: rgba(67, 137, 69, .3);
+}
+
+.pendente {
+	background-color: rgba(235, 166, 63, .3);
+}
+
+.rejeitada {
+	background-color: rgba(228, 12, 43, .3);
+}
+</style>
+
 <div class="container">
 	<div class="row">
 		<div class="col s12 center">
@@ -7,21 +25,33 @@
 		</div>
 	</div>
 
-	<table class="highlight responsive-table">
-		<thead>
-			<tr>
-				<th class="grey-text">#</th>
-				<th class="almocai-text">Aluno</th>
-				<th class="almocai-text text-amarelo">Intolerância</th>
-				<th class="almocai-text text-azul">Documento</th>
-				<th class="almocai-text text-azul">Alterar</th>
-			</tr>
-		</thead>
+	<div class="row" style="margin: 1rem 0 2rem 0;">
+		<div class="col s12 center">
+			Legenda (estados das intolerâncias): 
+			<b style="padding: .75rem;" class="legenda pendente">Pendente</b>
+			<b style="padding: .75rem;" class="legenda rejeitada">Rejeitada</b>
+			<b style="padding: .75rem;" class="legenda validada">Validada</b>
+			
+		</div>
+	</div>
 
-		<tbody>
-			{{intolerancias}}
-		</tbody>
+	<div class="card-panel">
+		<table class="responsive-table">
+			<thead>
+				<tr>
+					<th class="grey-text">#</th>
+					<th class="almocai-text">Aluno</th>
+					<th class="almocai-text text-amarelo">Intolerância</th>
+					<th class="almocai-text text-azul">Documento</th>
+					<th class="almocai-text text-azul">Alterar</th>
+				</tr>
+			</thead>
 
-	</table>
+			<tbody>
+				{{intolerancias}}
+			</tbody>
+
+		</table>
+	</div>
 	
 </div>
