--- a/aluno/main.html
+++ b/aluno/main.html
@@ -8,6 +8,10 @@
 </div>
 
 <div class="section container">
+
+  <!-- Mensagem ao usuário caso já tenha passado das 10h e os botões estejam indisponíveis -->
+  {{disabled_msg}}
+
   <div class="row">
     <!-- Confimação do aluno -->
     {{cartao_presenca}}
