Correções de Interface

--- a/funcionario/cardapio/main.html
+++ b/funcionario/cardapio/main.html
@@ -24,7 +24,7 @@
       <div class="col s12">
         <a
           href="{root_path}funcionario/cardapios/"
-          class="btn btn-large almocai bold waves-effect"
+          class="btn btn-large almocai bold waves-effect acessar-interface-btn"
         >
           <i class="material-icons left">check</i>
           Salvar
