--- a/template.html
+++ b/template.html
@@ -4,14 +4,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0"/>
   <title>{title} - Almoçaí</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{root_path}assets/img/icons/icon-128x128.png" />
+  <link rel="shortcut icon" href="{root_path}assets/img/icons/icon-192x192.png" />
 
   <!-- Manifest -->
-  <link rel="manifest" href="{root_path}assets/pwa/manifest.json">
+  <link rel="manifest" href="{root_path}manifest.json">
 
   <!-- Fontes -->
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400{peso_fonte}" rel="stylesheet">
