--- a/administrador/main.html
+++ b/administrador/main.html
@@ -34,20 +34,20 @@
 </div>
 
 <div class="container">
-  <div class="card-panel center-align">
+  <div class="card-panel center-align acessar-interface">
     
     <div class="row">
       <div class="col s12">
-        <h2 class="bold almocai-text">Acessar interface</h2>
+        <h2 class="almocai-text nunito">Acessar interface</h2>
       </div>
     </div>
 
     <div class="row">
 
-      <div class="col s12 m6" style="margin-bottom: 1rem;">
+      <div class="col s12 m6" >
         <a 
           href="{root_path}aluno/"
-          class="btn-large waves-effect waves-light bold almocai"
+          class="btn-large waves-effect waves-light bold almocai acessar-interface-btn"
         >
           <i class="material-icons left">school</i>
           Aluno
@@ -59,7 +59,7 @@
       <div class="col s12 m6">
         <a 
           href="{root_path}funcionario/"
-          class="btn-large waves-effect waves-light bold almocai azul"
+          class="btn-large waves-effect waves-light bold almocai azul acessar-interface-btn"
         >
           <i class="material-icons left">perm_identity</i>
           Funcionário
