--- a/componentes/nav-funcionario-trp.html
+++ b/componentes/nav-funcionario-trp.html
@@ -5,11 +5,11 @@
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}">
         Página inicial
-        <i class="material-icons right">home</i>
+        <i class="material-icons left">home</i>
       </a></li>
       <li><a class="waves-effect" href="{root_path}funcionario/cardapios">
         Cardápios
-        <i class="material-icons right">menu_book</i>
+        <i class="material-icons left">menu_book</i>
       </a></li>
       <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
@@ -20,11 +20,11 @@
   <li class="sidenav__logo"><img src="{root_path}assets/img/logo-verde.svg"></li>
   <li><a class="waves-effect" href="{root_path}funcionario/">
     Página inicial
-    <i class="material-icons right">home</i>
+    <i class="material-icons left">home</i>
   </a></li>
   <li><a class="waves-effect" href="{root_path}funcionario/cardapios">
     Criar cardápio
-    <i class="material-icons right">menu_book</i>
+    <i class="material-icons left">menu_book</i>
   </a></li>
   <li><a class="waves-effect" href="{root_path}entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
 </ul>
