--- a/funcionario/cardapio/add_alimento_semana.html
+++ b/funcionario/cardapio/add_alimento_semana.html
@@ -18,7 +18,7 @@
         <div class="col s12">
           <div class="col s12">
           <button 
-            class="waves-effect waves-light btn azul almocai bold" type="submit" name="acao"
+            class="waves-effect waves-light btn azul almocai bold acessar-interface-btn" type="submit" name="acao"
             id="acao" value="AddAlimentoSemana"
           >
             <i class="material-icons left">add</i>
