--- a/funcionario/main.html
+++ b/funcionario/main.html
@@ -7,12 +7,6 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col s12">
-    <a href="intolerancias_alunos/">Gerenciar intolerâncias dos alunos</a>
-  </div>
-</div>
-
 {{cartoes_presenca}}
 
 <!-- Mensagem caso ainda não tenha a quantidade de alunos necessária -->
@@ -20,3 +14,9 @@
 
 <!-- Mensagem caso não haja cardápio -->
 {{erro_cardapio_indisponivel}}
+
+<div class="row">
+  <div class="col s12 m6 offset-m3 center" style="margin-top: 1rem;">
+    <a href="intolerancias_alunos/" class="btn-large waves-effect waves-light bold acessar-interface-btn">Gerenciar intolerâncias dos alunos</a>
+  </div>
+</div>
