--- a/funcionario/main.html
+++ b/funcionario/main.html
@@ -17,6 +17,6 @@
 
 <div class="row">
   <div class="col s12 m6 offset-m3 center" style="margin-top: 1rem;">
-    <a href="intolerancias_alunos/" class="btn-large waves-effect waves-light bold acessar-interface-btn">Gerenciar intolerâncias dos alunos</a>
+    <a href="intolerancias-alunos/" class="btn-large waves-effect waves-light bold acessar-interface-btn">Gerenciar intolerâncias dos alunos</a>
   </div>
 </div>
