Sistema não mostra nome do arquivo (que é hash) das intolerâncias ao usuário + gitignore
Os PDFs em arquivos/intolerancias/ são todos para testes e estão relacionados, portanto, com registros locais no BD. por isso, devem ser ignorados

--- a/funcionario/intolerancias-alunos/intolerancia.html
+++ b/funcionario/intolerancias-alunos/intolerancia.html
@@ -43,7 +43,7 @@
 							href="{doc_path}" 
 							class="btn almocai azul waves-effect waves-light" 
 							download>
-							{doc_nome}
+							Baixar
 							<i class="material-icons right">
 								cloud_download
 							</i>
