--- a/aluno/perfil/cartao_intolerancia_item.html
+++ b/aluno/perfil/cartao_intolerancia_item.html
@@ -27,7 +27,7 @@
 							href="{doc_path}" 
 							class="btn almocai azul waves-effect waves-light" 
 							download>
-							{doc_nome}
+							Baixar
 							<i class="material-icons right">
 								cloud_download
 							</i>
