--- a/aluno/cardapio/dia_cartao.html
+++ b/aluno/cardapio/dia_cartao.html
@@ -21,13 +21,13 @@
         <p class="cardapio__confirmacao--title">Almocará no IFC neste dia?</p>
         <div class="row">
           <div class="col s6 center">
-            <button class="waves-effect btn cardapio__confirmacao--btn"
+            <button {disabled} class="waves-effect btn cardapio__confirmacao--btn"
             type="submit" name="acao" id="acao" value="PresencaSim" >
               Sim
             </button>
           </div>
           <div class="col s6 center">
-            <button class="waves-effect btn cardapio__confirmacao--btn almocai vermelho"
+            <button {disabled} class="waves-effect btn cardapio__confirmacao--btn almocai vermelho"
             type="submit" name="acao" id="acao" value="PresencaNao">
               Não
             </button>
