Aperfeiçoamento da Interface

--- a/administrador/componentes/adicionar_usuario.html
+++ b/administrador/componentes/adicionar_usuario.html
@@ -9,13 +9,13 @@
       <div class="row">
         
         <div class="input-field col s12">
-          <input id="nome" type="text" name="nome" required maxlength="255" />
-          <label for="nome">Nome (nome completo, por exemplo "Fulano da Silva")</label>
+          <input id="nome" type="text" name="nome" required maxlength="255" placeholder="Ex: Fulano da Silva"/>
+          <label for="nome">Nome completo</label>
         </div>        
 
         <div class="input-field col s12 m8">
-          <input id="username" type="text" name="username" maxlength="100" required />
-          <label for="username">Username (login, por exemplo "fulano.silva")</label>
+          <input id="username" type="text" name="username" maxlength="100" required placeholder="Ex: fulano.silva" />
+          <label for="username">Nome de usuário</label>
           <span class="helper-text" data-error="Username já em uso" data-success=""></span>
         </div>
         
