--- a/funcionario/cardapio/main.html
+++ b/funcionario/cardapio/main.html
@@ -26,8 +26,8 @@
           href="{root_path}funcionario/cardapios/"
           class="btn btn-large almocai bold waves-effect acessar-interface-btn"
         >
-          <i class="material-icons left">check</i>
-          Salvar
+          <i class="material-icons left">keyboard_backspace</i>
+          Voltar
         </a>
       </div>
     </div>
