--- a/funcionario/intolerancias-alunos/main.html
+++ b/funcionario/intolerancias-alunos/main.html
@@ -1,15 +1,18 @@
-
-	<div class="section banner valign-wrapper banner--10">
+<div class="section banner valign-wrapper banner--13">
 		<div class="row">
 			<div class="col s12">
-				<h1 class="banner__titulo">Gerenciamento de intolerâncias</h1>
-				<h4 class="banner__subtitulo">dos alunos</h4>
+				<h1 class="banner__titulo">Gerenciar intolerâncias</h1>
+				<h4 class="banner__subtitulo">alimentares e alergias dos alunos</h4>
 			</div>
 		</div>
 	</div>
+	
+
+<div class="container">
+	<div class="row">
 
 	<div class="row" style="margin: 1rem 0 2rem 0;">
-		<div class="col s12 center texto">
+		<div class="col s12 center">
 			<p>
 				Legenda (estados das intolerâncias): 
 			</p>
@@ -22,8 +25,8 @@
 		</div>
 	</div>
 
-	<div class="container">
-		<table class="card-panel responsive-table">
+	<div class="card-panel col s12">
+		<table class="responsive-table">
 			<thead>
 				<tr>
 					<th class="grey-text">#</th>
