--- a/funcionario/main.html
+++ b/funcionario/main.html
@@ -15,7 +15,7 @@
 <!-- Mensagem caso não haja cardápio -->
 {{erro_cardapio_indisponivel}}
 
-<div class="row">
+<div class="row container">
   <div class="col s12 m6 offset-m3 center" style="margin-top: 1rem;">
     <a href="intolerancias-alunos/" class="btn-large waves-effect waves-light bold acessar-interface-btn">Gerenciar intolerâncias dos alunos</a>
   </div>
