Alertas e alterações na interface

--- a/administrador/main.html
+++ b/administrador/main.html
@@ -38,7 +38,7 @@
     
     <div class="row">
       <div class="col s12">
-        <h2 class="almocai-text nunito">Acessar interface</h2>
+        <h2 class="almocai-text nunito">Acessar como usuário</h2>
       </div>
     </div>
 
