--- a/aluno/cartao_presenca_disabledmsg.html
+++ b/aluno/cartao_presenca_disabledmsg.html
@@ -1,10 +1,7 @@
-<div class="col s12">
-	<div class="card-panel almocai azul white-text"
-			 style="padding: .2rem 0 .2rem 1.2rem;">
+<div class="col s12 l8 offset-l2">
+	<div class="card-panel almocai azul almocai-text text-branco" style="padding: 1rem;">
 		<p>
-			<b>Aviso: </b>
-			você só pode alterar sua presença até 10h, pois é nesse horário que se traz a comida conforme a contagem de alunos. <br/>
-			<b>Marque sua presença até as 10h.</b>
+			<b>Aviso: </b>você só pode alterar sua presença até 10h, pois é nesse horário que se traz a comida conforme a contagem de alunos. <b>Marque sua presença até as 10h.</b>
 		</p>
 	</div>
 </div>
