--- a/aluno/perfil/cartao_alimentacao.html
+++ b/aluno/perfil/cartao_alimentacao.html
@@ -5,7 +5,7 @@
       {{itens}}
     </div>
     <div class="row center-align">
-      <button class="almocai btn amarelo waves-effect" style="margin-top: 1rem;"
+      <button class="almocai btn amarelo waves-effect bold acessar-interface-btn" style="margin-top: 1rem;"
       type="submit" name="acao" id="acao" value="SalvarAlimentacao">
         Salvar
       </button>
