--- a/aluno/perfil/cartao_alimentacao_item.html
+++ b/aluno/perfil/cartao_alimentacao_item.html
@@ -1,4 +1,4 @@
-<div class="col s6">
+<div class="col s12 left-align">
   <label class="radio-amarelo">
     <input class="with-gap" type="radio" {checked}
     name="alimentacao" value="{codigo}" />
