--- a/aluno/perfil/cartao_alt_email.html
+++ b/aluno/perfil/cartao_alt_email.html
@@ -12,7 +12,7 @@
 			</div>
 			
 			<div class="col s12 center">
-				<button class="waves-effect almocai btn"
+				<button class="waves-effect almocai btn bold acessar-interface-btn"
 				type="submit" name="acao" value="AlterarEmail">Alterar</button>
 			</div>
 		
