--- a/aluno/perfil/cartao_carne.html
+++ b/aluno/perfil/cartao_carne.html
@@ -5,7 +5,7 @@
       {{itens}}
     </div>
     <div class="row center-align">
-      <button class="btn almocai vermelho waves-effect" style="margin-top: 1rem;"
+      <button class="btn almocai vermelho waves-effect bold acessar-interface-btn" style="margin-top: 1rem;"
       type="submit" name="acao" id="acao" value="SalvarCarnes">
         Salvar
       </button>
