--- a/aluno/perfil/main.html
+++ b/aluno/perfil/main.html
@@ -18,8 +18,8 @@
         <!-- Cartão almoça todos os dias -->
         {{cartao_frequencia}}
   
-        <!-- Cartão intolerancia -->
-        {{cartao_intolerancia}}
+        <!-- Cartão alimentação -- seleção se é vegetariano, vegano ou nenhum -->
+        {{cartao_alimentacao}}
 
       </div>
     </div>   
@@ -29,10 +29,10 @@
       <div class="row">
         
         <!-- Cartão carne -->
-        {{cartao_carne}}
-
-        <!-- Cartão alimentação -- seleção se é vegetariano, vegano ou nenhum -->
-        {{cartao_alimentacao}}
+        <!-- {{cartao_carne}} -->
+        
+        <!-- Cartão intolerancia -->
+        {{cartao_intolerancia}}
 
       </div>
     </div>
