--- a/aluno/perfil/senha_antiga_incorreta.html
+++ b/aluno/perfil/senha_antiga_incorreta.html
@@ -1,8 +1,8 @@
-<div class="row" style="padding: 0 1rem 0 1rem;">
-  <div
-    class="col s12 card-panel almocai vermelho"
-    style="margin-top: 2rem; padding: 1rem;"
-  >
-    <h6 class="white-text">A senha antiga informada está incorreta.</h6>
+<div class="col s12" style="margin-top: 2rem; padding: 1rem;">
+  <div class="card-panel almocai vermelho">
+    <h6 class="almocai-text text-branco">A senha antiga informada está incorreta.</h6>
+    <p class="right-align">
+      <a href="./" class="perfil__dismiss bold right-align">OK</a>
+    </p>
   </div>
 </div>
