--- a/componentes/nav-funcionario-trp.html
+++ b/componentes/nav-funcionario-trp.html
@@ -1,7 +1,7 @@
 <nav class="navbar-transparent">
   <div class="nav-wrapper container">
     <img class="no-select brand-logo" src="{root_path}assets/img/logo-branco.svg">
-    <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}">
         Página inicial
@@ -23,7 +23,7 @@
     <i class="material-icons left">home</i>
   </a></li>
   <li><a class="waves-effect" href="{root_path}funcionario/cardapios">
-    Criar cardápio
+    Cardápios
     <i class="material-icons left">menu_book</i>
   </a></li>
   <li><a class="waves-effect" href="{root_path}entrar/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
