--- a/componentes/nav-transparent.html
+++ b/componentes/nav-transparent.html
@@ -1,7 +1,7 @@
 <nav class="navbar-transparent">
   <div class="nav-wrapper container">
     <img class="no-select brand-logo" src="{root_path}assets/img/logo-branco.svg">
-    <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}"><i class="material-icons left">home</i>Página Inicial</a></li>
       <li><a class="waves-effect" href="{root_path}aluno/perfil/"><i class="material-icons left">face</i>Perfil</a></li>
