--- a/entrar/recuperacao/msg_email_enviado.html
+++ b/entrar/recuperacao/msg_email_enviado.html
@@ -1,7 +1,13 @@
-<div class="row">
-	<div class="col s12 card-panel almocai white-text">
-		<p style="font-size: 1.3rem;">
-			Enviamos o link de recuperação de senha para o seu e-mail.
-		</p>
+<div class="row container">
+	<div class="col s12 m6 offset-m3">
+		<div class="card-panel almocai almocai-text text-branco">
+			<p style="font-size: 1.25rem;">
+				Enviamos o link de recuperação de senha para o seu e-mail.
+			</p>
+
+			<p class="right-align">
+				<a href="./" class="perfil__dismiss bold">OK</a>
+			</p>
+		</div>
 	</div>
 </div>
