--- a/entrar/recuperacao/msg_email_invalido.html
+++ b/entrar/recuperacao/msg_email_invalido.html
@@ -1,7 +1,12 @@
-<div class="row">
-	<div class="col s12 card-panel almocai vermelho white-text">
-		<p style="font-size: 1.3rem;">
-			O email é invalido.
-		</p>
+<div class="row container">
+	<div class="col s12 m6 offset-m3">
+		<div class="card-panel almocai vermelho almocai-text text-branco">
+			<p style="font-size: 1.25rem;">
+				O email inserido é invalido. Verifique seu email e tente novamente! 
+			</p>
+			<p class="right-align">
+				<a href="../" class="perfil__dismiss bold">OK</a>
+			</p>
+		</div>
 	</div>
 </div>
