--- a/entrar/senha_alterada_sucesso.html
+++ b/entrar/senha_alterada_sucesso.html
@@ -1,9 +1,11 @@
 <div class="row">
-  <div
-    class="card-panel almocai col s12 white-text"
-    style="padding: 1rem 1rem 1rem 1.5rem;"
-  >
-    <h5>Sucesso:</h5>
-    <h6>Sua senha foi alterada com sucesso</h6>
+  <div class="col s12 m8 offset-m2 l6 offset-l2">
+    <div class="card-panel almocai  almocai-text text-branco">
+      <h5>Sucesso:</h5>
+      <h6>Sua senha foi alterada com sucesso</h6>
+      <p class="right-align">
+        <a href="./" class="perfil__dismiss bold">OK</a>
+      </p>
+    </div> 
   </div>
 </div>
