--- a/funcionario/intolerancias-alunos/main.html
+++ b/funcionario/intolerancias-alunos/main.html
@@ -14,7 +14,7 @@
 	<div class="row" style="margin: 1rem 0 2rem 0;">
 		<div class="col s12 center">
 			<p>
-				Legenda (estados das intolerâncias): 
+				Situação das solicitações: 
 			</p>
 			<p>
 				<b style="padding: .75rem;" class="legenda pendente">Pendente</b>
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<div class="card-panel col s12">
+	<div class="card-panel col s12" style="padding: 1rem;">
 		<table class="responsive-table">
 			<thead>
 				<tr>
