--- a/aluno/cartao_presenca_selecionada.html
+++ b/aluno/cartao_presenca_selecionada.html
@@ -1,7 +1,8 @@
 <!-- Mostra o que o usuário selecionou em relação a presença -->
-<div class="row" style="margin-top: 1rem;">
-  <div class="col s12 card-panel almocai white-text {cor}" style="padding: 1rem;"">
-    Você selecionou:
-    <h3>{presenca_selecionada}</h3>
+<div class="row">
+  <div class="col s12 {cor}" style="padding: 1rem;"">
+    <p class="almocai-text text-{cor} center">
+      {presenca_selecionada}
+    </p>
   </div>
 </div>
