--- a/aluno/perfil/cartao_frequencia.html
+++ b/aluno/perfil/cartao_frequencia.html
@@ -2,12 +2,12 @@
 <form class="col s12 padding-card-small" action="acao.php" method="post">
   <div class="card hoverable perfil__cartao-almoca">
     {{frequencia_mensagem}}
-    <h4 class="perfil__cartao-almoca--titulo">Com que frequência você almoca no IFC?</h4>
+    <h4 class="perfil__cartao-almoca--titulo">Com que frequência você almoça no IFC?</h4>
     <div class="row perfil__cartao-almoca--radio">
       {{itens}}
     </div>
     <div class="row center-align" style="margin-top: 1rem;">
-      <button class="almocai btn azul waves-effect"
+      <button class="almocai btn azul waves-effect bold acessar-interface-btn"
       type="submit" name="acao" id="acao" value="SalvarFrequencia">
         Salvar
       </button>
