--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -19,16 +19,16 @@
 <div class="col s12 padding-card-small">
   <div class="card hoverable perfil__cartao-intolerancia">
     <h4 class="perfil__cartao-intolerancia--titulo">
-      Você possui alguma intolerância/alergia alimentar?
+      Você possui alguma intolerância alimentar ou alergia?
     </h4>
     <div class="row">
       <div class="col s12 center">
 
         <a 
-          class="btn waves-effect waves-light almocai"
+          class="btn waves-effect waves-light almocai bold acessar-interface-btn"
           href="{root_path}aluno/intolerancias/"
         >
-          Clique aqui
+          Adicionar
         </a>
 
         
