--- a/aluno/perfil/cartao_intolerancia_item.html
+++ b/aluno/perfil/cartao_intolerancia_item.html
@@ -7,45 +7,48 @@
 		data-target="intol{codigo}"
 
 	>
-		<i class="material-icons">remove_red_eye</i>
+		<i class="material-icons olho">remove_red_eye</i>
 	</a>
 </li>
 
 <div class="modal" id="intol{codigo}">
-	<div class="modal-content">
+	<div class="modal-content" style="padding-bottom: 0;">
 
 		<div class="row">
-			<div class="col s12">
-				<ul class="collection">
-					<li class="collection-item almocai-text">
-						Intolerância:
-						<b>{descricao}</b>
-					</li>
-					<li class="collection-item almocai-text">
-						Documento: 
-						<a 
-							href="{doc_path}" 
-							class="btn almocai azul waves-effect waves-light" 
-							download>
-							Baixar
-							<i class="material-icons right">
-								cloud_download
-							</i>
-						</a>
+			<div class="col s12 perfil__intolerancia">
 
-					</li>
-					<li class="collection-item">
-						Estado:
+				<p class="perfil__intolerancia--text">
+					Intolerância alimentar ou alergia apresentada: 
+					<b>{descricao}</b>
+				</p>
+				
+				<p class="perfil__intolerancia--text">
+					Visualizar documento enviado: 
+					<a 
+						href="{doc_path}" 
+						style="margin-left: 1rem"
+						class="btn almocai waves-effect waves-light bold acessar-interface-btn" 
+						download>
+						Baixar
+						<i class="material-icons right">
+							cloud_download
+						</i>
+					</a>
+				</p>
+
+				<p class="perfil__intolerancia--text">
+						Estado da requisição:
 						<b style="padding: .5rem;" class="legenda {estado_cor}">{estado}</b>
-					</li>
-					{{motivo_rejeicao}}
-				</ul>
+				</p>
+				
+				{{motivo_rejeicao}}
+
 			</div>
 		</div>
 
 	</div>
 
 	<div class="modal-footer">
-		<a href="#!" class="modal-close waves-effect waves-green btn-flat">Voltar</a>
+		<a href="#!" class="modal-close waves-effect btn-flat">Voltar</a>
 	</div>
 </div>
