--- a/aluno/perfil/frequenciaAlterada_cartao.html
+++ b/aluno/perfil/frequenciaAlterada_cartao.html
@@ -1,15 +1,12 @@
 <div class="row">
-	<div class="card-panel col s12 almocai">
+	<div class="card-panel col s12 padding-card-small almocai amarelo">
 
-		<h5 class="white-text">Frequência alterada com sucesso</h5>
-
-		<div class="row">
-			<div class="card-panel col s12 almocai amarelo white-text">
-				<h5>Aviso</h5>
-
-				<p>{mensagem}</p>
-			</div>
-		</div>
+		<h5 class="almocai-text text-branco">Frequência alterada com sucesso</h5>
+		<h5 class="almocai-text text-branco"><b>Aviso</b></h5>
+		<p class="almocai-text text-branco">{mensagem}</p>
+		<p class="right-align">
+			<a href="./" class="perfil__dismiss bold">OK</a>
+		</p>
 
 	</div>
 </div>
