--- a/componentes/nav-administrador.html
+++ b/componentes/nav-administrador.html
@@ -1,10 +1,16 @@
 <nav class="navbar-transparent">
   <div class="nav-wrapper container">
     <img class="no-select brand-logo" src="{root_path}assets/img/logo-branco.svg">
-    <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}"><i class="material-icons left">home</i>Página Inicial</a></li>
       <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
     </ul>
   </div>
 </nav>
+
+<ul class="sidenav" id="mobile-sidenav">
+  <li class="sidenav__logo"><img src="{root_path}assets/img/logo-verde.svg"></li>
+  <li><a class="waves-effect" href="{root_path}"><i class="material-icons left">home</i>Página Inicial</a></li>
+  <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
+</ul>
