--- a/componentes/nav-funcionario.html
+++ b/componentes/nav-funcionario.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="nav-wrapper container">
     <img class="no-select brand-logo" src="{root_path}assets/img/logo-verde.svg">
-    <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}">
         Página inicial
