--- a/entrar/recuperacao/main.html
+++ b/entrar/recuperacao/main.html
@@ -1,26 +1,38 @@
+<div class="section banner banner--3 valign-wrapper">
+  <div class="row">
+    <div class="col s12">
+      <h1 class="banner__titulo">Recuperação</h1>
+      <h4 class="banner__subtitulo">de senha</h4>
+    </div>
+  </div>
+</div>
+
+{{msg_email_enviado}}
+
 <div class="container">
 	<div class="row">
 		<div class="col s12">
-			<h3 class="almocai-text">Recuperação de senha</h3>
+			<div class="card-panel hoverable">
+				<p>Caso tenha esquecido sua senha, digite seu e-mail abaixo. Enviaremos então os passos seguintes para que possa redefinir sua senha.</p>		
+			
+			<form action="" method="POST">
+				<div class="row">
+					<div class="col s12 input-field">
+						<label for="email">Digite seu e-mail</label>
+						<input type="email" name="email" id="email" />
+					</div>
+				</div>
+		
+				<div class="row">
+					<div class="col s12 input-field">
+						<button type="submit" class="btn almocai waves-effect waves-light bold acessar-interface-btn">
+							Recuperar senha
+						</button>
+					</div>
+				</div>
+			</form>
+			<p>Se você não informou o seu email em seu perfil ao acessar o sistema, entre em contato com "jesus cristo".</p>
+
 		</div>
 	</div>
-
-	{{msg_email_enviado}}
-	
-	<form action="" method="POST">
-		<div class="row">
-			<div class="col s12 input-field">
-				<label for="email">Digite seu e-mail</label>
-				<input type="email" name="email" id="email" />
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col s12 input-field">
-				<button type="submit" class="btn almocai waves-effect waves-light bold">
-					Recuperar senha
-				</button>
-			</div>
-		</div>
-	</form>
 </div>
