--- a/entrar/nova-senha/main.html
+++ b/entrar/nova-senha/main.html
@@ -12,8 +12,8 @@
 
 		<div class="row">
 			<div class="input-field col s12">
-				<label for="nova_senha">Nova senha</label>
-				<input type="password" name="nova_senha" id="nova_senha" required />
+				<label for="nova-senha">Nova senha</label>
+				<input type="password" name="nova-senha" id="nova-senha" required />
 			</div>
 		</div>
 
