--- a/funcionario/intolerancias-alunos/main.html
+++ b/funcionario/intolerancias-alunos/main.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class="card-panel col s12" style="padding: 1rem;">
-		<table class="responsive-table">
+		<table class="responsive-table centered">
 			<thead>
 				<tr>
 					<th class="grey-text">#</th>
