--- a/aluno/intolerancias/main.html
+++ b/aluno/intolerancias/main.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container" style="margin-top: 1rem;">
 	<div class="card-panel hoverable">
 
 		<form action="acao.php" method="POST" enctype="multipart/form-data">
@@ -41,7 +41,7 @@
 				<div class="col s12">
 					<div class="file-field input-field">
 						<div class="btn">
-							<span>Documento</span>
+							<span>Documento <i class="material-icons right">cloud_upload</i></span>
 							<input type="file" name="documento" id="documento" required >
 						</div>
 						<div class="file-path-wrapper">
