--- a/entrar/senha_alterada_sucesso.html
+++ b/entrar/senha_alterada_sucesso.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col s12 m8 offset-m2 l6 offset-l2">
+  <div class="col s12 m8 offset-m2 l8 offset-l2 xl6 offset-xl2">
     <div class="card-panel almocai  almocai-text text-branco">
       <h5>Sucesso:</h5>
       <h6>Sua senha foi alterada com sucesso</h6>
