--- a/entrar/nova-senha/main.html
+++ b/entrar/nova-senha/main.html
@@ -1,29 +1,39 @@
-<div class="container">
-	
+<div class="section banner banner--15 valign-wrapper">
 	<div class="row">
 		<div class="col s12">
-			<h4 class="almocai-text">Recuperar senha</h4>
+			<h1 class="banner__titulo">Redefinição</h1>
+			<h4 class="banner__subtitulo">de senha</h4>
 		</div>
 	</div>
+</div>
+	
 
-	<form action="acao.php" method="POST">
-		<input type="hidden" name="usuario_codigo" value="{usuario_codigo}">
-		<input type="hidden" name="usuario_email" value="{usuario_email}">
-
-		<div class="row">
-			<div class="input-field col s12">
-				<label for="nova-senha">Nova senha</label>
-				<input type="password" name="nova-senha" id="nova-senha" required />
+<div class="container">
+	<div class="row">
+		<div class="col s12 m10 offset-m1 l8 offset-l2 xl6 offset-xl3">
+			<div class="card-panel hoverable">
+				<p>Digite abaixo uma nova senha para que possa acessar novamente o sistema.</p>
+				<form action="acao.php" method="POST">
+					<input type="hidden" name="usuario_codigo" value="{usuario_codigo}">
+					<input type="hidden" name="usuario_email" value="{usuario_email}">
+			
+					<div class="row">
+						<div class="input-field col s12">
+							<label for="nova-senha">Nova senha</label>
+							<input type="password" name="nova-senha" id="nova-senha" required/>
+						</div>
+					</div>
+			
+					<div class="row">
+						<div class="input-field col s12 center">
+							<button class="almocai btn white-text bold waves-effect waves-light bold acessar-interface-btn">
+								<i class="material-icons left">send</i>
+								Salvar
+							</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="input-field col s12">
-				<button class="almocai btn white-text bold waves-effect waves-light">
-					<i class="material-icons left">send</i>
-					Salvar
-				</button>
-			</div>
-		</div>
-	</form>
+	</div>
 </div>
