--- a/entrar/recuperacao/main.html
+++ b/entrar/recuperacao/main.html
@@ -11,7 +11,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col s12">
+		<div class="col s12 m10 offset-m1 l8 offset-l2 xl6 offset-xl3">
 			<div class="card-panel hoverable">
 				<p>Caso tenha esquecido sua senha, digite seu e-mail abaixo. Enviaremos então os passos seguintes para que possa redefinir sua senha.</p>		
 			
@@ -24,8 +24,9 @@
 				</div>
 		
 				<div class="row">
-					<div class="col s12 input-field">
+					<div class="col s12 input-field center">
 						<button type="submit" class="btn almocai waves-effect waves-light bold acessar-interface-btn">
+							<i class="material-icons right">send</i>
 							Recuperar senha
 						</button>
 					</div>
