não mostra erro php ao tentar carregar semana com código inválido

--- a/funcionario/cardapio/main.html
+++ b/funcionario/cardapio/main.html
@@ -9,6 +9,8 @@
   </div>
 
   <div class="container margin-top-small">
+    {{ cardapio_indisponivel }}
+    
     <div class="row">
       {{ dias }}
     </div>
