--- a/componentes/nav-funcionario.html
+++ b/componentes/nav-funcionario.html
@@ -3,7 +3,7 @@
     <img class="no-select brand-logo" src="{root_path}assets/img/logo-verde.svg">
     <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a class="waves-effect" href="{root_path}">
+      <li><a class="waves-effect" href="{root_path}funcionario/">
         Página inicial
         <i class="material-icons left">home</i>
       </a></li>
