--- a/funcionario/cardapio/main.html
+++ b/funcionario/cardapio/main.html
@@ -8,16 +8,17 @@
     </div>
   </div>
 
-  <div class="container margin-top-small">
-    <div class="row">
-      {{ dias }}
-    </div>
+  <div class="container">
 
-    <div class="row">
+    <div class="row" style="margin-top: .75rem;">
       {{ add_alimento_semana }}
     </div>
 
-    <div style="height: 2rem;"></div>
+    <div class="row margin-top-small">
+      {{ dias }}
+    </div>
+
+    <div style="height: .25rem;"></div>
 
     <!-- por usabilidade -->
     <div class="row center">
