--- a/sobre/index.html
+++ b/sobre/index.html
@@ -32,14 +32,14 @@
         <img class="no-select brand-logo" src="../assets/img/logo-branco.svg">
         <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">home</i>Página Inicial</a></li>
+          <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li>
         </ul>
       </div>
     </nav>
 
     <ul class="sidenav" id="mobile-sidenav">
       <li class="sidenav__logo"><img src="../assets/img/logo-verde.svg"></li>
-      <li><a class="waves-effect" href="../entrar/"><i class="material-icons left">home</i>Página Inicial</a></li>
+      <li><a class="waves-effect" href="../"><i class="material-icons left">home</i>Página Inicial</a></li>
     </ul>
   </header>
 
@@ -288,7 +288,7 @@
         <div class="sobre__container">
 
           <div class="col s12">
-            <h4 class="sobre__container--titulo almocai-text text-amarelo">FAQs </h4>
+            <h4 class="sobre__container--titulo almocai-text text-amarelo">FAQ</h4>
           </div>
           <div class="col s12">
                   
@@ -327,7 +327,7 @@
   </footer>
 
   <!-- JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="../assets/js/almocai.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       var elems = document.querySelectorAll('.sidenav');
