--- a/sobre/index.html
+++ b/sobre/index.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Encosto
+                        Engenheira de Software
                       </div>
                       <div class="equipe__conteudo--nome">
                         Daiane
@@ -117,7 +117,7 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Peso
+                        Engenheira de Software
                       </div>
                       <div class="equipe__conteudo--nome">
                         Daniele
@@ -189,7 +189,7 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Borracha
+                        Gestora de Tarefas e Documentação
                       </div>
                       <div class="equipe__conteudo--nome">
                         Martina
@@ -237,7 +237,7 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Pseudo Programador
+                        Programador
                       </div>
                       <div class="equipe__conteudo--nome">
                         Rian
@@ -264,7 +264,7 @@
                         Testadora
                       </div>
                       <div class="equipe__conteudo--nome">
-                        Rô nao sei o nome
+                        Rosane
                       </div>
                       <div class="equipe__conteudo--social">
                         <ul class="equipe__conteudo--lista">
