melhor retorno com anchors
# qdo funcionário cadastra alimento num dia, página volta para o mesmo dia em vez do topo da página
# mesma coisa para o aluno quando cadastra pesença nos dias da semana

--- a/aluno/cardapio/dia_cartao.html
+++ b/aluno/cardapio/dia_cartao.html
@@ -1,4 +1,4 @@
-<div class="col s12 m6 xl3">
+<div class="col s12 m6 xl3" id="{dia_cod}">
   <div class="card-panel cardapio__painel {fundo_cor}">
     <div class="cardapio__picture cardapio__picture--{num_dia}"></div>
     <h4 class="cardapio__cabecalho">
