--- a/funcionario/cardapio/add_alimento_semana.html
+++ b/funcionario/cardapio/add_alimento_semana.html
@@ -1,4 +1,4 @@
-<div class="hide-on-small-only col m2 l4"></div>
+<div class="hide-on-small-only col m2 l4" id="addSemana"></div>
 
 <div class="col s12 m8 l4 center">
   <div class="funcionario__cardapio-add">
