--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -16,7 +16,7 @@
   }
 </style>
 
-<div class="col s12 padding-card-small">
+<div class="col s12">
   <div class="card hoverable perfil__cartao-intolerancia">
     <h4 class="perfil__cartao-intolerancia--titulo">
       Você possui alguma intolerância alimentar ou alergia?
