--- a/componentes/nav-transparent.html
+++ b/componentes/nav-transparent.html
@@ -13,7 +13,7 @@
 
 <ul class="sidenav" id="mobile-sidenav">
   <li class="sidenav__logo"><img src="{root_path}assets/img/logo-verde.svg"></li>
-  <li><a class="waves-effect active" href="{root_path}aluno/"><i class="material-icons left">home</i>Página Inicial</a></li>
+  <li><a class="waves-effect" href="{root_path}aluno/"><i class="material-icons left">home</i>Página Inicial</a></li>
   <li><a class="waves-effect" href="{root_path}aluno/perfil/"><i class="material-icons left">face</i>Perfil</a></li>
   <li><a class="waves-effect" href="{root_path}aluno/cardapio/"><i class="material-icons left">menu_book</i>Cardápio</a></li>
   <li><a class="waves-effect" href="{root_path}sair/"><i class="material-icons left">power_settings_new</i>Sair</a></li>
