--- a/entrar/main.html
+++ b/entrar/main.html
@@ -11,7 +11,7 @@
         method="post"
       >
         <div class="row col s12 m8 offset-m2 l8 offset-l2 xl6 offset-xl2">
-          <img class="no-select" src="{root_path}assets/img/logo-verde.svg" />
+          <img class="no-select" alt="Logo do Almoçaí" src="{root_path}assets/img/logo-verde.svg" />
         </div>
 
         <div class="row">
@@ -25,7 +25,17 @@
             <input id="senha" type="password" name="senha" />
             <label for="senha">Senha</label>
           </div>
-        </div>     
+        </div>  
+        <div class="row">
+          <div class="col s12 m8 offset-m2 l8 offset-l2 xl6 offset-xl2">
+            <p>
+              <label>
+                <input type="checkbox" class="filled-in" name="manterConectado">
+                <span>Mantenha-me conectado</span>
+              </label>
+            </p>
+          </div>
+        </div>   
 
         <!-- Erro no login. Script do erro em scripts.js-->
         <div id="modal-erro" class="modal login-section__modal">
