--- a/funcionario/cardapio/main.html
+++ b/funcionario/cardapio/main.html
@@ -8,18 +8,14 @@
     </div>
   </div>
 
-  <div class="container margin-top-small">
+  <div class="container">
     {{ cardapio_indisponivel }}
-    
-    <div class="row">
-      {{ dias }}
-    </div>
 
     <div class="row" style="margin-top: .75rem;">
       {{ add_alimento_semana }}
     </div>
-
-    <div class="row margin-top-small">
+    
+    <div class="row  margin-top-small">
       {{ dias }}
     </div>
 
