--- a/aluno/perfil/cartao_intolerancia.html
+++ b/aluno/perfil/cartao_intolerancia.html
@@ -39,7 +39,7 @@
 
     <div class="row">
       <div class="col s12">
-        <ul class="collection">
+        <ul class="collection" id="ul_intolerancia">
           {{intolerancias}}
         </ul>
       </div>
