--- a/sobre/index.html
+++ b/sobre/index.html
@@ -161,7 +161,7 @@
                 <div class="equipe">
                   <div class="equipe__conteudo">
                     <div class="equipe__conteudo--frente">
-                      <img src="../assets/img/pessoas/pessoa-4.png" alt="" class="equipe__conteudo--imagem">
+                      <img src="../assets/img/pessoas/pessoa-5.png" alt="" class="equipe__conteudo--imagem">
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
@@ -185,11 +185,11 @@
                 <div class="equipe">
                   <div class="equipe__conteudo">
                     <div class="equipe__conteudo--frente">
-                      <img src="../assets/img/pessoas/pessoa-5.png" alt="" class="equipe__conteudo--imagem">
+                      <img src="../assets/img/pessoas/pessoa-4.png" alt="" class="equipe__conteudo--imagem">
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Gestora de Tarefas e Documentação
+                        Stakeholder
                       </div>
                       <div class="equipe__conteudo--nome">
                         Martina
@@ -261,10 +261,10 @@
                     </div>
                     <div class="equipe__conteudo--verso">
                       <div class="equipe__conteudo--funcao">
-                        Testadora
+                        Stakeholder
                       </div>
                       <div class="equipe__conteudo--nome">
-                        Rosane
+                        Rosangela
                       </div>
                       <div class="equipe__conteudo--social">
                         <ul class="equipe__conteudo--lista">
