--- a/componentes/footer.html
+++ b/componentes/footer.html
@@ -2,6 +2,7 @@
   <div class="footer-copyright">
     <div class="container">
     © 2019 Almoçaí
+    <a class="right" href="https://docs.google.com/forms/d/e/1FAIpQLSfo5bwixNr9DLAPKDNf0RQPPg6fppJyFww0QopVUhijdMx6CQ/viewform">&nbsp;&nbsp; Questionário</a>
     <a class="right" href="{root_path}sobre/">Sobre</a>
     </div>
   </div>
