Removido componente nav.html

--- a/componentes/nav-funcionario-trp.html
+++ b/componentes/nav-funcionario-trp.html
@@ -1,5 +1,6 @@
 <nav class="navbar-transparent">
   <div class="nav-wrapper container">
+    <a href="{root_path}funcionario/"></a>
     <img class="no-select brand-logo" src="{root_path}assets/img/logo-branco.svg">
     <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
