--- a/aluno/cartao_presenca_selecionada.html
+++ b/aluno/cartao_presenca_selecionada.html
@@ -1,7 +1,7 @@
 <!-- Mostra o que o usuário selecionou em relação a presença -->
 <div class="row">
-  <div class="col s12 {cor}" style="padding: 1rem;">
-    <p class="almocai-text text-{cor} center flow-text">
+  <div class="col s12 {cor}">
+    <p style="margin-top: .25rem;" class="almocai-text text-{cor} center flow-text">
       {presenca_selecionada}
     </p>
   </div>
