--- a/componentes/nav-transparent.html
+++ b/componentes/nav-transparent.html
@@ -1,6 +1,8 @@
 <nav class="navbar-transparent">
   <div class="nav-wrapper container">
-    <img class="no-select brand-logo" src="{root_path}assets/img/logo-branco.svg">
+    <a href="{root_path}aluno/">
+      <img class="no-select brand-logo" src="{root_path}assets/img/logo-branco.svg">
+    </a>
     <a href="" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a class="waves-effect" href="{root_path}aluno/"><i class="material-icons left">home</i>Página Inicial</a></li>
